--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -44,8 +44,6 @@ jobs:
         run: yarn
       - name: run typecheck
         run: yarn typecheck
-      - name: run Prettier
-        run: yarn prettier:check
 
   test-node:
     name: Test on Node.js v${{ matrix.node-version }}
@@ -90,25 +88,25 @@ jobs:
         run: yarn test
         env:
           CI: true
-  release:
-    if: ${{ github.event_name == 'push' && (github.event.ref == 'refs/heads/master' || github.event.ref == 'refs/heads/next') }}
-    name: Release new version
-    needs: [typecheck, test-node, test-os]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
-        with:
-          node-version: lts/*
-          cache: yarn
-      - name: Install
-        run: yarn
-      - name: Test
-        run: yarn test
-      - name: Build
-        run: yarn build
-      - name: Release
-        run: npx semantic-release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+  # release:
+  #   if: ${{ github.event_name == 'push' && (github.event.ref == 'refs/heads/master' || github.event.ref == 'refs/heads/next') }}
+  #   name: Release new version
+  #   needs: [typecheck, test-node, test-os]
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - uses: actions/setup-node@v4
+  #       with:
+  #         node-version: lts/*
+  #         cache: yarn
+  #     - name: Install
+  #       run: yarn
+  #     - name: Test
+  #       run: yarn test
+  #     - name: Build
+  #       run: yarn build
+  #     - name: Release
+  #       run: npx semantic-release
+  #       env:
+  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  #         NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
