--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -41,7 +41,7 @@ jobs:
           node-version: lts/*
           # cache: yarn
       - name: install
-        run: npm
+        run: npm install
       - name: run typecheck
         run: npm typecheck
 
@@ -51,7 +51,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: [18.x, 20.x]
+        node-version: [20.x, 22.x, 24.x]
     runs-on: ubuntu-latest
 
     steps:
